updated the pricing

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ footer { padding: 30px 0; text-align: center; color: #777; }
 <section class="hero" data-aos="fade-up">
     <div class="container">
         <h1>Stop Losing Clients to Missed Messages</h1>
-        <p>Your AI Salon Assistant handles bookings, replies, and FAQs 24/7 – so you don’t have to.</p>
+        <p>Your AI Salon Assistant handles bookings, replies, and FAQs 24/7 — using your own OpenAI account, so you only pay for what you use.</p>
         <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-hero btn-lg mt-4">Book Your Free Demo</a>
     </div>
 </section>
@@ -126,40 +126,6 @@ footer { padding: 30px 0; text-align: center; color: #777; }
     </div>
 </section>
 
-<!-- Pricing Section -->
-<section class="py-5 bg-light" data-aos="fade-up">
-    <div class="container">
-        <h2 class="section-title text-center">Pricing That Works for You</h2>
-        <p class="text-center mb-4">One-time setup fee ensures your AI assistant is fully configured, plus a simple monthly plan for ongoing access and support. Clients provide their OpenAI API key (BYOK) — no hidden usage fees.</p>
-        
-        <div class="row justify-content-center mt-4 g-4">
-            <!-- One-Time Setup Card -->
-            <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
-                <div class="pricing-card text-center">
-                    <h4>One-Time Setup</h4>
-                    <p class="display-6 fw-bold my-3">$250–$500</p>
-                    <p>We configure your AI assistant for your services, pricing, and workflow. This covers integration, prompt tuning, testing, and client onboarding.</p>
-                    <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-primary mt-3">Get Started</a>
-                </div>
-            </div>
-
-            <!-- Monthly Subscription Card -->
-            <div class="col-md-5" data-aos="fade-up" data-aos-delay="200">
-                <div class="pricing-card pricing-highlight text-center">
-                    <h4>Monthly Subscription</h4>
-                    <p class="display-6 fw-bold my-3">$29–$59 / month</p>
-                    <p>Flat monthly fee for full access to your AI assistant — 24/7 replies, booking automation, updates, and support. Bring your own OpenAI API key (BYOK).</p>
-                    <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-primary mt-3">Get Started</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="text-center mt-4">
-            <p>Optional Premium Tier: $149/month — unlimited workflows, dedicated support, and strategy calls. Perfect for businesses that want to scale quickly.</p>
-        </div>
-    </div>
-</section>
-
 <!-- About Me Section -->
 <section class="py-5 bg-light" data-aos="fade-up">
     <div class="container">
@@ -168,7 +134,35 @@ footer { padding: 30px 0; text-align: center; color: #777; }
                 <div class="feature-card text-center">
                     <i class="fa-solid fa-user feature-icon"></i>
                     <h5>About Me</h5>
-                    <p>I’m Biruk, a data architect and DevOps specialist with experience building scalable AI and automation solutions. I help local businesses in Ottawa implement smart AI assistants that handle bookings, messages, and FAQs 24/7.</p>
+                    <p>I’m Biruk, a data architect and DevOps specialist with experience building scalable AI and automation solutions. I help local businesses in Ottawa implement smart AI assistants that handle bookings, messages, and FAQs 24/7. You provide your own OpenAI account — I handle setup, configuration, and support.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Pricing Section -->
+<section class="py-5 bg-light" data-aos="fade-up">
+    <div class="container">
+        <h2 class="section-title text-center">Simple Pricing</h2>
+        <div class="row justify-content-center mt-4 g-4">
+            <!-- Setup Fee -->
+            <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
+                <div class="pricing-card text-center">
+                    <h4>One-Time Setup</h4>
+                    <p class="display-6 fw-bold my-3">$250–$500</p>
+                    <p>We configure your AI assistant for your services, pricing, and workflow. Quick, professional setup using your own OpenAI account.</p>
+                    <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-primary mt-3">Get Started</a>
+                </div>
+            </div>
+
+            <!-- Monthly Subscription -->
+            <div class="col-md-5" data-aos="fade-up" data-aos-delay="200">
+                <div class="pricing-card pricing-highlight text-center">
+                    <h4>Monthly Subscription</h4>
+                    <p class="display-6 fw-bold my-3">$25–$75</p>
+                    <p>Full access to your AI assistant — 24/7 replies, booking automation, updates, and support. You provide your own AI account, so your usage is fully under your control.</p>
+                    <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-primary mt-3">Get Started</a>
                 </div>
             </div>
         </div>
@@ -209,12 +203,12 @@ footer { padding: 30px 0; text-align: center; color: #777; }
             <p>Yes! You control the answers, hours, and style of replies.</p>
         </div>
         <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
-            <h5>Do I need to pay for OpenAI usage?</h5>
-            <p>No — you provide your own OpenAI API key (BYOK), so the monthly fee only covers access, support, and updates. This keeps costs predictable and transparent.</p>
-        </div>
-        <div class="faq-item" data-aos="fade-up" data-aos-delay="400">
             <h5>Is it suitable for small businesses?</h5>
             <p>Absolutely. It's designed for solo entrepreneurs and small teams to save time and boost client satisfaction.</p>
+        </div>
+        <div class="faq-item" data-aos="fade-up" data-aos-delay="400">
+            <h5>Do I need to provide an OpenAI API key?</h5>
+            <p>Yes. You provide your own API key so you only pay for usage, and I handle setup and support for your assistant.</p>
         </div>
     </div>
 </section>
