--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
 <style>
 body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; scroll-behavior: smooth; line-height: 1.6; margin: 0; padding: 0; }
-.hero { background: linear-gradient(rgba(111,66,193,0.7), rgba(155,110,243,0.7)),
+
+.hero { 
+    background: linear-gradient(rgba(111,66,193,0.7), rgba(155,110,243,0.7)),
                 url('https://images.unsplash.com/photo-1560185127-6f99b1d6a207?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
     color: white; padding: 100px 0; text-align: center;
 }
@@ -49,31 +51,46 @@ body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; scroll-behav
 .hero p { font-size: 1.3rem; margin-top: 15px; opacity: 0.95; }
 .btn-hero { background-color: #ff9f1c; border-color: #ff9f1c; color: white; }
 .btn-hero:hover { background-color: #e68a00; border-color: #e68a00; }
+
 .section-title { font-size: 2rem; font-weight: 600; margin-bottom: 25px; }
 .feature-card { background: white; padding: 25px; border-radius: 12px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.08); transition: transform 0.3s; }
 .feature-card:hover { transform: translateY(-5px); }
 .feature-icon { font-size: 3rem; color: #6f42c1; margin-bottom: 15px; }
+
 .pricing-card { border-radius: 12px; padding: 30px; background: white;
     box-shadow: 0 10px 25px rgba(0,0,0,0.08); transition: transform 0.3s; }
 .pricing-card:hover { transform: translateY(-5px); }
 .pricing-highlight { border: 2px solid #6f42c1; }
+
 .testimonial-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.08); margin-bottom: 20px; }
 .testimonial-quote { font-style: italic; }
 .faq-item { margin-bottom: 15px; }
+
 footer { padding: 30px 0; text-align: center; color: #777; }
 .footer-social a { margin: 0 10px; color: #6f42c1; font-size: 1.3rem; transition: color 0.3s; }
 .footer-social a:hover { color: #ff9f1c; }
 
 /* Workflow */
 .workflow-step { 
-    width: 200px; 
+    width: 220px; 
+    background-color: #ffffff;  
+    color: #333333;             
+    padding: 20px; 
+    border-radius: 12px; 
+    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    text-align: center;
+    margin-bottom: 15px;
 }
-.workflow-arrow { 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    color: #6f42c1; 
+.workflow-arrow i {
+    color: #ff9f1c; 
+    margin: 10px 0;
+}
+
+/* Responsive workflow for mobile */
+@media (max-width: 768px) {
+    .workflow { flex-direction: column; align-items: center; }
+    .workflow-arrow { transform: rotate(0deg); }
 }
 </style>
 </head>
@@ -89,23 +106,23 @@ footer { padding: 30px 0; text-align: center; color: #777; }
         <!-- Lead Qualification Workflow -->
         <div class="container my-5">
             <div class="workflow d-flex justify-content-center flex-wrap text-center">
-                <div class="workflow-step mx-3 my-2 p-3 bg-white rounded shadow-sm">
+                <div class="workflow-step">
                     <i class="fa-solid fa-envelope-open-text fa-2x mb-2"></i>
                     <h6>New Inquiry</h6>
                     <p>Client submits interest via email, form, or messaging.</p>
                 </div>
-                <div class="workflow-arrow mx-2 my-2 align-self-center">
+                <div class="workflow-arrow">
                     <i class="fa-solid fa-arrow-right fa-2x"></i>
                 </div>
-                <div class="workflow-step mx-3 my-2 p-3 bg-white rounded shadow-sm">
+                <div class="workflow-step">
                     <i class="fa-solid fa-comments fa-2x mb-2"></i>
                     <h6>AI Qualifies</h6>
                     <p>Asks key questions and scores lead (Hot, Warm, Cold).</p>
                 </div>
-                <div class="workflow-arrow mx-2 my-2 align-self-center">
+                <div class="workflow-arrow">
                     <i class="fa-solid fa-arrow-right fa-2x"></i>
                 </div>
-                <div class="workflow-step mx-3 my-2 p-3 bg-white rounded shadow-sm">
+                <div class="workflow-step">
                     <i class="fa-solid fa-user-check fa-2x mb-2"></i>
                     <h6>Prioritize & Notify</h6>
                     <p>Hot leads get immediate notification, others are scheduled for follow-up.</p>
