--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; scroll-behavior: smooth; line-height: 1.6; margin: 0; padding: 0; }
 
 .hero { 
-    background: linear-gradient(rgba(111,66,193,0.7), rgba(155,110,243,0.7)),
+    background: linear-gradient(rgba(154, 238, 120, 0.7), rgba(232, 241, 227, 0.7)),
                 url('https://images.unsplash.com/photo-1560185127-6f99b1d6a207?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
     color: white; padding: 100px 0; text-align: center;
 }
