--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; scroll-behavior: smooth; line-height: 1.6; margin: 0; padding: 0; }
 
 .hero { 
-    background: linear-gradient(rgba(154, 238, 120, 0.7), rgba(232, 241, 227, 0.7)),
+    background: linear-gradient(rgba(250, 3, 85, 0.952), rgba(192, 92, 130, 0.7)),
                 url('https://images.unsplash.com/photo-1560185127-6f99b1d6a207?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
     color: white; padding: 100px 0; text-align: center;
 }
@@ -56,7 +56,7 @@ body { font-family: 'Inter', sans-serif; background-color: #f8f9fa; scroll-behav
 .feature-card { background: white; padding: 25px; border-radius: 12px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.08); transition: transform 0.3s; }
 .feature-card:hover { transform: translateY(-5px); }
-.feature-icon { font-size: 3rem; color: #6f42c1; margin-bottom: 15px; }
+.feature-icon { font-size: 3rem; color: #f13636; margin-bottom: 15px; }
 
 .pricing-card { border-radius: 12px; padding: 30px; background: white;
     box-shadow: 0 10px 25px rgba(0,0,0,0.08); transition: transform 0.3s; }
@@ -98,7 +98,7 @@ footer { padding: 30px 0; text-align: center; color: #777; }
 }
 
 .workflow-arrow i {
-    color: #ee5555;
+    color: #fcf9f9;
     font-size: 2rem;
 }
 
@@ -116,8 +116,8 @@ footer { padding: 30px 0; text-align: center; color: #777; }
 <section class="hero" data-aos="fade-up">
     <div class="container">
         <h1>Never Miss a Serious Client Again</h1>
-        <p>Your AI Real Estate Assistant captures leads, qualifies them, schedules showings, and answers client questions 24/7 — using your own OpenAI account so you only pay for what you use. Early Access: Only 2 spots available!</p>
-        <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-hero btn-lg mt-4">Reserve Early Access</a>
+        <p><strong>Automate lead capture, qualification, and client communication with your custom AI Real Estate Assistant. <br> Early Access: Only 2 spots left.</strong></p>
+        <a href="mailto:mbirukasmaref@gmail.com?subject=Demo Request" class="btn btn-success btn-lg mt-4">Reserve Early Access</a>
 
         <!-- Lead Qualification Workflow -->
         <div class="container my-5">
